# re402-ros2-midterm

./: README.md
src/my_robot/: package.xml  setup.py
src/my_robot/config/: gz_bridge.yaml
src/my_robot/launch/: robot_launch.py
src/my_robot/model/: robot.xacro
